syntax = "proto2";

option go_package = "github.com/tweag/trustix/packages/trustix-proto/protocol";

package trustix;

enum HashType {
  SHA256 = 0;
}

enum Mode {
  Log = 0;
  GossipMeta = 1;
  GossipLog = 2;
}

message Protocol {

  required string ID = 1; // UUID

  required Mode Mode = 2;

  required HashType HashType = 3;

}
