syntax = "proto3";

option go_package = "github.com/tweag/trustix/schema";

message STH {
  bytes LogRoot = 1;
  uint64 TreeSize = 2;
  bytes MapRoot = 3;
  bytes Signature = 4;
}
